
Autoconnects are far more customizable now.

A number of new options are in the general {} block of ircd.conf.  Look at
example.conf for more information

Remote K-lines are supported.  The shared block in the conf file is what
gives remote servers (and optionally restricted to specific user@host's)
permission to send their k-lines to your server.  Look at kline.txt for more 
details.  Below is a brief overview of the oper protocol to remote K-lines.

kline directed at a specific server
  /quote kline user@host ON server :reason
  /quote kline [time] user@host on server :reason

kline directed at all servers
  /quote kline user@host on * :reason
  /quote kline [time] user@host on * :reason

original normal local klines

  /quote kline user@host :reason
  /quote kline [time] user@host :reason

User modes can be specified oper only.  This is yet another start time
configurable option in ircd.conf.  See the comments in example.conf for
more details.

Hybrid now has the ISUPPORT/005 numeric now.  It can be seen when the client 
connects and in VERSION.  The fields are as follows:
KNOCK          - Support KNOCK
VCHANS         - Support Virtual Channels
MODES=%i       - The number of channel modes accepted per MODE command
MAXCHANNELS=%i - The compiled in maximum channels per user (Note that this
                 may become controlled in class {} in the future)
MAXBANS=%i     - The compiled in limit on the number of bans per channel
MAXTARGETS=%i  - The number of users that may be chained together in a 
                 PRIVMSG or NOTICE (user1,user2,user3...)
NICKLEN=%i     - The maximum nickname length
TOPICLEN=%i    - The compiled in topic length
KICKLEN=%i     - The length of a KICK message
CHANTYPES=%s   - The types of channels supported (currently '#&')
PREFIX=%s      - The allowed PRIVMSG/NOTICE channel prefixes (server based
                 /onotice, NOTICE @%#channel :message)

# complete me

# $Id: whats-new.txt,v 7.15 2001/01/09 19:11:59 wcampbel Exp $