@@ -1,5 +1,5 @@
 # Hybrid 7 Example configuration file
-# $Id: example.conf,v 7.48 2001/01/09 19:11:58 wcampbel Exp $
+# $Id: example.conf,v 7.49 2001/01/18 00:00:28 wcampbel Exp $
 # December 2000 - ejb, wcampbel, db and others
 
 # All comments start with the # sign.
@@ -442,6 +442,7 @@ general {
 	# +i - invisible  - Not shown in NAMES or WHO unless you share a 
 	#                   a channel
 	# +k - skill      - See server generated KILL messages
+        # +l - locops     - See LOCOPS messages
 	# +n - nchange    - See client nick changes
 	# +o - NONE       - Operator status.  OPER controls this
 	# +r - rej        - See rejected client notices
